[gd_scene load_steps=11 format=3 uid="uid://dp40g117k0oe2"]

[ext_resource type="Script" path="res://Script/Player/Skill/elemental_orb.gd" id="1_46t30"]
[ext_resource type="Texture2D" uid="uid://uuorvi37gf7d" path="res://Art/Player/Spirit/water.png" id="3_b7g51"]
[ext_resource type="Texture2D" uid="uid://doxbn3m5i8dh6" path="res://Art/Player/Skill/water_orb.png" id="4_vnt71"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ap5u"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_hyrg7"]

[sub_resource type="Gradient" id="Gradient_hspjc"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_vl2ks"]
length = 0.001

[sub_resource type="Animation" id="Animation_k00t0"]
resource_name = "idle"
length = 0.3
loop_mode = 1

[sub_resource type="Animation" id="Animation_wo1c0"]
resource_name = "pop"
length = 0.3

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdtib"]
_data = {
"RESET": SubResource("Animation_vl2ks"),
"idle": SubResource("Animation_k00t0"),
"pop": SubResource("Animation_wo1c0")
}

[node name="ElementalOrb" type="Area2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_46t30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource("RectangleShape2D_4ap5u")

[node name="Ground" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("CircleShape2D_hyrg7")

[node name="Particles2D" type="CPUParticles2D" parent="."]
amount = 20
lifetime = 0.5
explosiveness = 0.23
texture = ExtResource("4_vnt71")
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.1
color_ramp = SubResource("Gradient_hspjc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.90735e-06, 1.90735e-06)
scale = Vector2(0.363636, 0.359551)
texture = ExtResource("3_b7g51")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xdtib")
}

[connection signal="body_entered" from="Ground" to="." method="ground_contact"]
